# ACI

./: .gitignore  LICENSE  README.md  SECURITY.md  architecture.drawio  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  configure-repo-settings.yml  monthly-update.yml
aci_tool/: build_chat_features.py  chat_semantic.py  cli.py  compute.py  config.py  schemas.py  scoring.py  utils.py  web_export.py
aci_tool/collectors/: negotiations.py  ransomware_live.py  ransomwhere.py  readme.txt
aci_tool/prototypes/: chat_semantic_proto.py
tests/: test_chat_semantic.py  test_compute.py  test_ransomwhere.py  test_scoring.py  test_web_export.py
